--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
-      "name": "Cilik",
-      "description": "A Powerful  Telegram group management bot with autobots theme.",
+      "name": "Cilik Robot",
+      "description": "A Powerful  Telegram group management bot with anime theme.",
       "keywords": [
          "telegram",
          "advance",
          "group",
          "manager",
-         "Cilik"
+         "CilikRobot"
       ],
     
    "logo":    "https://telegra.ph/file/a807460d64ac73c5dc83a.jpg",  
@@ -29,65 +29,63 @@
   ],  
    "env": {
       "TOKEN": {
-         "description": "Your bot token. Get one from @BotFather duh",
+         "description": "Masukan Bot Token kamu silahkan buat di @BotFather",
          "required": true,
          "value": ""
       },
       "API_ID": {
-         "description": "Get API_ID from my.telegram.org or, used for telethon based modules.",
+         "description": "Dapatkan API_ID dari my.telegram.org, digunakan untuk modul berbasis telethon.",
          "required": true,
          "value": ""
       },
       "API_HASH": {
-         "description": "Get API_HASH from my.telegram.org , used for telethon based modules.",
+         "description": "Dapatkan API_HASH dari my.telegram.org, digunakan untuk modul berbasis telethon.",
          "required": true,
          "value": ""
       },    
-      "SQLALCHEMY_DATABASE_URI": {
-         "description": "Your postgres sql db, empty this field if you dont have one.",
-         "required": false,
-         "value": "sqldbtype://username:pw@hostname:port/db_name"
-      },      
       "OWNER_ID": {
-         "description": "Your user ID as an integer.",
+         "description": "Masukan Id Akun Tele Kamu.",
          "required": true,
-         "value": ""
+         "value": "1784606556"
      },
 
       "STRING_SESSION": {
-         "description": "Fill with telethon string session.",
+         "description": "Masukan String Telethon ambil string di bot @CilikStringBot.",
          "required": true,
          "value": "" 
       },
       "HEROKU_API_KEY": {
-        "description": "Your Heroku API key, get it from 'https://dashboard.heroku.com/account'",
+        "description": "Heroku API KEY Anda, dapatkan dari 'https://dashboard.heroku.com/account'",
         "value": ""
       },
       "HEROKU_APP_NAME": {
-        "description": "Enter the Heroku app name here (Must an exact same name with your input above).",
+        "description": "Masukkan nama aplikasi Heroku di sini (samain dengan nama yang kamu isi pertama).",
         "required": false
       },
       "BOT_USERNAME": {
-         "description": "username of your bot without the @",
+         "description": "Username bot Anda tanpa @",
          "value": "GreyCilik_bot"
       },
-
+      "BOT_NAME": {
+         "description": "Masukan Nama Bot Kamu",
+         "value": "Cilik Robot"            
+      },
       "BOT_ID": {
-         "description": "to get your bot_id using other bot or userbot",
+         "description": "Masukan Id Bot Anda",
          "value": ""
       },
 
       "OWNER_USERNAME": {
-         "description": "Your username without the @",
+         "description": "Username Anda tanpa @",
          "value": "greyyvbss"
       },
       "SUPPORT_CHAT": {
-         "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to masha support than consider you made an enemy.",
+         "description": "Masukan Username Grup Anda, Masukan Tanpa @.",
          "required": true,
          "value": "CilikSupport"
       },
       "MONGO_DB_URI": {
-         "description": "Required for database connections.",
+         "description": "Masukan MongoDb Database, Dapatkan di (MongoDB.com).",
          "required": true,
          "value": ""
       },
@@ -100,14 +98,14 @@
         "required": false
      },
      "EVENT_LOGS": {
-         "description": "Event logs channel to note down important bot level events, recommend to make this public. ex: '-123456'",
+         "description": "Masukan Id Grup Logs, Buatlah Grup Publik dan masukan bot anda, id grup pakai awalan -100",
          "required": true,
-         "value": "-1001376025003"
+         "value": "-1001692951846"
       },
       "JOIN_LOGGER": {
-         "description": "A channel where bot will print who added it to what group, useful during debugging or spam handling.",
+         "description": "Masukan Id Grup, bisa disamakan dengan vars event logs diatas.",
          "required": true,
-         "value": "-1001376025003"
+         "value": "-1001692951846"
       },      
       "CASH_API_KEY": {
          "description": "Required for currency converter. Get yours from https://www.alphavantage.co/support/#api-key",
@@ -120,104 +118,100 @@
          "value": "-xyz"
      }, 
 
-      "API_OPENWEATHER": {
-        "description": "Get your own APPID from https://api.openweathermap.org/data/2.5/weather",
+      "OPENWEATHERMAP_ID": {
+        "description": "Get your own API from https://api.openweathermap.org/data/2.5/weather",
         "value": "",
         "required": false
       },
 
       "DEV_USERS": {
-         "description": "ID of users who are Devs of your bot (can use /py etc.). If you are a noob and would come and bother Masha support then keep the current ID's here at they are and add yours.",
+         "description": "ID pengguna yang merupakan Pengembang bot Anda (dapat menggunakan /py dll.). Jika Anda seorang noob dan akan datang dan mengganggu dukungan Masha maka simpan ID saat ini di sini dan tambahkan milik Anda.",
          "required": false,
          "value": ""
      },
-        "ARQ_API": {
-            "description": "Get this from @ARQRobot.",
+      "ERROR_LOG": {
+         "description": "ID of log for show error.",
+         "required": false,
+         "value": ""
+     },
+        "ARQ_API_KEY": {
+            "description": "Dapatkan ini dari @ARQRobot.",
             "required": true
         },
 
-      "sw_api": {
+      "SPAMWATCH_API": {
          "description": "Spamwatch API Token, Get one from @SpamWatchBot.",
          "required": false,
          "value": ""
       }, 
       "STRICT_GBAN": {
-         "description": "Enforce gbans across new groups as well as old groups. When a gbanned user talks, he will be banned.",
+         "description": "Terapkan gban di seluruh grup baru dan juga grup lama. Saat pengguna yang diblokir berbicara, dia akan diblokir.",
          "value": "True"
       },
       "DRAGONS": {
-         "description": "A space separated list of user IDs who you want to assign as sudo users.",
+         "description": "Daftar ID pengguna yang dipisahkan spasi yang ingin Anda tetapkan sebagai pengguna sudo.",
          "required": false,
          "value": ""
       },
       "DEMONS": {
-         "description": "A space separated list of user IDs who you wanna assign as support users(gban perms only).",
+         "description": "Daftar ID pengguna yang dipisahkan spasi yang ingin Anda tetapkan sebagai pengguna dukungan (khusus izin gban).",
          "required": false,
          "value": ""
       },
       "TIGERS": {
-         "description": "A space separated list of user IDs who you wanna assign as tiger users.",
+         "description": "Daftar ID pengguna yang dipisahkan spasi yang ingin Anda tetapkan sebagai pengguna harimau.",
          "required": false,
          "value": ""
       },
       "WOLVES": {
-         "description": "A space separated list of user IDs who you want to assign as whitelisted - can't be banned with your bot.",
+         "description": "Daftar ID pengguna yang dipisahkan spasi yang ingin Anda tetapkan sebagai daftar putih - tidak dapat diblokir dengan bot Anda.",
          "required": false,
          "value": ""
       },
       "ENV": {
-         "description": "Setting this to ANYTHING will enable environment variables. Leave it as it is",
+         "description": "Menyetel ini ke APA SAJA akan mengaktifkan variabel lingkungan. Biarkan apa adanya",
          "value": "ANYTHING"
       },
       "WEBHOOK": {
-         "description": "Setting this to ANYTHING will enable webhooks. If you dont know how this works leave it as it is",
+         "description": "Menyetel ini ke APA SAJA akan mengaktifkan webhook. Jika Anda tidak tahu cara kerjanya, biarkan apa adanya",
          "required": false,
          "value": ""
       },
       "PORT": {
-         "description": "Port to use for your webhooks. Better leave this as it is on heroku",
+         "description": "Port yang akan digunakan untuk webhook Anda. Lebih baik biarkan ini seperti di heroku",
          "required": false,
          "value": ""
       },
       "URL": {
-         "description": "The Heroku App URL :-  https://<appname>.herokuapp.com/",
+         "description": "URL Aplikasi Heroku :- https://<appname>.herokuapp.com/",
          "required": false,
          "value": ""
       },
       "NO_LOAD": {
-         "description": "Dont load these modules cause they shit, space separation",
+         "description": "Jangan memuat modul ini karena mereka sial, pemisahan ruang",
          "required": false,
          "value": "rss"
       }, 
       "BL_CHATS": {
-         "description": "List of chats you want blacklisted.",
+         "description": "Daftar obrolan yang ingin Anda daftar hitam.",
          "required": false,
          "value": ""
       },
       "ALLOW_EXCL": {
-         "description": "Set this to True if you want ! to be a command prefix along with /. Recommended is True",
+         "description": "Setel ini ke True jika Anda mau ! menjadi awalan perintah bersama dengan /. Direkomendasikan Benar",
          "value": "True"
       },
       "DONATION_LINK": {
-         "description": "Optional: link where you would like to receive donations. If you are a noob, better leave it linking to paul",
+         "description": "Donasi",
          "required": false,
-         "value": ""
+         "value": "@greyyvbss"
       },
       "DEL_CMDS": {
-         "description": "Set this to True if you want to delete command messages from users who don't have the perms to run that command.",
+         "description": "Setel ini ke True jika Anda ingin menghapus pesan perintah dari pengguna yang tidak memiliki izin untuk menjalankan perintah itu.",
          "value": "True"
       },
-        "ARQ_API": {
-            "description": "Get this from @ARQRobot.",
-            "required": true
-        },
-      "BAN_STICKER": {
-         "description": "ID of the sticker you want to use when banning people.",
-         "required": false,
-         "value": ""
-      },
       "WALL_API": {
-         "description": "Required for wallpaper. Get your's from https://wall.alphacoders.com/",
+         "description": "Diperlukan untuk wallpaper. Dapatkan milik Anda dari https://wall.alphacoders.com/",
          "required": false,
          "value": ""
       }
