--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 # Config files, logs and stuff
-SkyzuRobot/modules/helper_funcs/temp.txt
-SkyzuRobot/elevated_users.json
-SkyzuRobot/config.py
-SkyzuRobot/config.ini
+GreyCilik/modules/helper_funcs/temp.txt
+GreyCilik/elevated_users.json
+GreyCilik/config.py
+GreyCilik/config.ini
 log.txt
 kangsticker.png
 updates.txt
 start_service.bat
 
 # Session files
-SkyzuRobot/*.session
-SkyzuRobot/*.session-journal
-Skyzu.session-journal
+GreyCilik/*.session
+GreyCilik/*.session-journal
+Grey.session-journal
 *.session
 
 # Byte-compiled / optimized / DLL files
