--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
       ],
     
    "logo":    "https://telegra.ph/file/a807460d64ac73c5dc83a.jpg",  
-   "repository": "https://github.com/grey423/Cilik",
+   "repository": "https://github.com/syahrizalemano/Cilik",
    "addons": [
           {
          "options": {
